# Data_Ingest_Parse

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsing.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestParsing/data/databases/: company.db
0-DataIngestParsing/data/structured_files/: inventory.xlsx
1-VectorEmbeddings/: embedding.ipynb  openaiembeddings.ipynb
2-Vector Stores/: 1-chromadb.ipynb
2-Vector Stores/chroma_db/: chroma.sqlite3
