[project]
name = "udemy-ragcourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
    "numpy>=1.26.4",
    "numpy<2; python_version < '3.13'",
    "numpy>=2.1.0; python_version >= '3.13'",
    "onnxruntime<1.21",
    "pandas>=3.0.3",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "transformers<5",
    "python-docx>=1.2.0",
    "docx2txt>=0.9",
    "unstructured[docx]>=0.24.1",
    "openpyxl>=3.1.5",
]
